@@ -2,6 +2,7 @@ Wed Mar  30  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkfile.c : Allow spaces in filenames (new 2.6 file dialog),
 		not tested with linux
+	* gtkgame.c : Fix maximised window->full screen (gtk 2+)
 
 Sat Mar 26 00:17:49 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
 
